--- a/frontend/src/app/components/family/family-form/family-form.component.html
+++ b/frontend/src/app/components/family/family-form/family-form.component.html
@@ -16,10 +16,10 @@
       class="flex flex-col gap-4 overflow-y-auto grow pr-1 scroll-invisible"
     >
       <input
-        type="email"
+        type="emailDestinatario"
         placeholder="Correo electrónico"
         pInputText
-        formControlName="email"
+        formControlName="emailDestinatario"
         class="p-3 rounded-md"
       />
 
