--- a/frontend/src/app/components/message-modal/message-modal.component.html
+++ b/frontend/src/app/components/message-modal/message-modal.component.html
@@ -5,8 +5,8 @@
       <button class="bg-gray-200 dark:bg-gray-600 text-gray-800 dark:text-white px-4 py-2 rounded-lg hover:bg-gray-300 dark:hover:bg-gray-500 transition-colors" (click)="cerrarModal()">
         Cancelar
       </button>
-      <button class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 transition-colors" (click)="eliminarButton()">
-        Eliminar
-      </button>
+      <p-button class="{{buttonText == 'Eliminar' ? 'bg-red-500 hover:bg-red-60' : ''}} px-4 py-2 rounded-lg 0 transition-colors" (click)="submitButton()">
+        {{ buttonText }}
+      </p-button>
   </div>
 </div>
