--- a/frontend/src/app/features/auth/pages/verify-email-page/verify-email-page.component.html
+++ b/frontend/src/app/features/auth/pages/verify-email-page/verify-email-page.component.html
@@ -1,30 +1,44 @@
 @if (isLoading()) {
-    <p-progressbar mode="indeterminate" [style]="{ height: '6px' }" />
+<p-progressbar mode="indeterminate" [style]="{ height: '6px' }" />
+} @else { @if( needLogin()) {
+<div class="flex flex-col gap-3">
+  <h1 class="text-2xl font-bold">Sesión caducada</h1>
+  <p>Por favor, inicia sesión de nuevo para poder continuar</p>
+  <p-button label="Iniciar sesión" (click)="showDialog()"></p-button>
+</div>
+} @else { @if(!emailVerified() && !needLogin()) {
+<div class="flex flex-col gap-3">
+  <h1 class="text-2xl font-bold">Por favor verifica tu email</h1>
+  <p>Por favor verifica tu email para poder continuar</p>
+  <p-button
+    styleClass="mt-5 w-full"
+    label="Verificar email"
+    (click)="verifyEmail()"
+    [loading]="isPosting"
+  ></p-button>
+</div>
 } @else {
-    @if( needLogin()) {
-        <div class="flex flex-col gap-3">
-            <h1 class="text-2xl font-bold">Sesión caducada</h1>
-            <p>Por favor, inicia sesión de nuevo para poder continuar</p>
-            <p-button label="Iniciar sesión" (click)="showDialog()"></p-button>
-        </div> 
-    }  @else {
-        @if(!emailVerified() && !needLogin()) {
-            <div class="flex flex-col gap-3">
-                <h1 class="text-2xl font-bold">Por favor verifica tu email</h1>
-                <p>Por favor verifica tu email para poder continuar</p>
-                <p-button label="Verificar email" (click)="verifyEmail()" [loading]="isPosting"></p-button>
-            </div>
-        } @else {
-            <div class="flex flex-col gap-3">
-                <h1 class="text-2xl font-bold">El email ya está verificado</h1>
-                <p>Este email ya ha sido verificado, por favor continua con tu sesión</p>
-                <p-button label="Acceder a mi cuenta" (click)="router.navigate(['dashboard'])"></p-button>
-            </div>
-        }
-    }
-    <p-dialog #dialog header="Inicio de sesión" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
-        <app-login-form-popup [email]="email!" (onNewToken)="handleNewToken($event)" />
-    </p-dialog>
-    
-}
+<div class="flex flex-col gap-3">
+  <h1 class="text-2xl font-bold">El email ya está verificado</h1>
+  <p>Este email ya ha sido verificado, por favor continua con tu sesión</p>
+  <p-button
+    styleClass="mt-5 w-full"
+    label="Acceder a mi cuenta"
+    (click)="router.navigate(['onboarding/message1'])"
+  ></p-button>
+</div>
+} }
+<p-dialog
+  #dialog
+  header="Inicio de sesión"
+  [modal]="true"
+  [(visible)]="visible"
+  [style]="{ width: '25rem' }"
+>
+  <app-login-form-popup
+    [email]="email!"
+    (onNewToken)="handleNewToken($event)"
+  />
+</p-dialog>
 
+}
