arreglos formularios + estilos css + añadida logica imagenes de perfil en la pagina user-profile

--- a/frontend/src/app/components/family/family-form/family-form.component.html
+++ b/frontend/src/app/components/family/family-form/family-form.component.html
@@ -46,7 +46,12 @@
           [disabled]="form.invalid"
           class="px-4 py-2 rounded-md"
         >
+        @if(editMode) {
+          Editar familiar
+        } 
+        @else {
           Enviar invitación
+        }
         </button>
       </div>
     </form>
