--- a/frontend/src/app/components/message-modal/message-modal.component.html
+++ b/frontend/src/app/components/message-modal/message-modal.component.html
@@ -2,10 +2,10 @@
   <div class="bg-white dark:bg-gray-700 rounded-2xl shadow-lg w-[90%] max-w-md max-h-[90vh] flex flex-col p-6 overflow-hidden">
     <p class="text-gray-600 dark:text-gray-300 mb-4 flex-grow">{{ message }}</p>
     <div class="flex justify-end space-x-2">
-      <button class="bg-gray-200 dark:bg-gray-600 text-gray-800 dark:text-white px-4 py-2 rounded-lg hover:bg-gray-300 dark:hover:bg-gray-500 transition-colors" (click)="cerrarModal()">
+      <p-button class="  rounded-lg dark:border-1 dark:border-gray-300" (click)="cerrarModal()">
         Cancelar
-      </button>
-      <p-button class="{{buttonText == 'Eliminar' ? 'bg-red-500 hover:bg-red-60' : ''}} px-4 py-2 rounded-lg 0 transition-colors" (click)="submitButton()">
+      </p-button>
+      <p-button class=" rounded-lg dark:border-1 dark:border-gray-300" (click)="submitButton()">
         {{ buttonText }}
       </p-button>
   </div>
