--- a/frontend/src/app/components/user-form/user-form.component.html
+++ b/frontend/src/app/components/user-form/user-form.component.html
@@ -16,17 +16,20 @@
     <form
       [formGroup]="form"
       (ngSubmit)="onSubmit()"
-      class="flex flex-col gap-4"
+      class="flex flex-col gap-4  overflow-y-auto grow pr-1 scroll-invisible"
     >
       @if (tipo === 'edit') {
 
-      <div class="profile-picture-section">
+      <div
+        class="profile-picture-section flex justify-center mb-4 align-middle"
+      >
         <input
           type="file"
           #fileInput
           (change)="onFileSelected($event)"
           accept="image/*"
           class="file-input hidden"
+          id="img_perfil"
         />
         <div
           class="profile-picture-placeholder cursor-pointer"
@@ -36,7 +39,8 @@
             [src]="
               profileImageUrl
                 ? profileImageUrl
-                : 'https://img.icons8.com/?size=40&id=85103&format=png&color=000000'
+                : 'https://img.icons8.com/?size=40&id=85103&format=png&color=' +
+                  (isDarkMode() ? 'ffffff' : '000000')
             "
             alt="Foto de Perfil"
             class="profile-image"
