--- a/frontend/src/app/features/dashboard/pages/notes-page/notes-page.component.html
+++ b/frontend/src/app/features/dashboard/pages/notes-page/notes-page.component.html
@@ -2,21 +2,25 @@
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
 
-<section class="p-6">
+<section class="p-4 max-w-xl mx-auto md:max-w-6xl space-y-6">
   <!-- Cabecera -->
-  <div class="flex justify-between items-center mb-6">
-    <h1 class="text-2xl font-bold">Mis Notas</h1>
-    <p-button icon="pi pi-plus" label="Nueva Nota" [raised]="true" styleClass="bg-primary text-white"
-      (onClick)="openNewNoteForm()" />
-  </div>
+<div class="flex justify-end mb-6">
+  <p-button
+    icon="pi pi-plus"
+    label="Nueva Nota"
+    [raised]="true"
+    (onClick)="openNewNoteForm()"
+    severity="primary"
+  />
+</div>
 
   <!-- Filtros -->
   <app-notes-filters (filtersChange)="onFiltersChange($event)" class="mb-6"></app-notes-filters>
 
   <!-- Lista de notas -->
-  <div class="mt-6 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6">
+  <div class="mt-6 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6 items-stretch">
     @if (filteredNotes.length === 0) {
-    <p class="text-gray-500 col-span-full">No hay notas disponibles.</p>
+    <p class="col-span-full text-center mt-10 mb-10  text-xl font-bold">No hay notas disponibles.</p>
     }
 
     @for (note of filteredNotes; track note.id) {
