fixed en el boton de guardar nota o actualziar nota

--- a/frontend/src/app/components/notes/note-form/note-form.component.html
+++ b/frontend/src/app/components/notes/note-form/note-form.component.html
@@ -21,6 +21,7 @@
       <div class="flex justify-end gap-2 mt-4 shrink-0">
         <p-button label="Cancelar" (onClick)="cerrarModal()" severity="secondary"/>
           <p-button
+            type="submit"
             [disabled]="form.invalid"
             severity="primary"
             [label]="editMode ? 'Actualizar Nota' : 'Guardar Nota'"
