--- a/frontend/src/app/features/dashboard/pages/routines/calendar-page/calendar-page.component.html
+++ b/frontend/src/app/features/dashboard/pages/routines/calendar-page/calendar-page.component.html
@@ -12,6 +12,7 @@
     ></p-select>
 
     <!-- Botones -->
+    @if(userFamilia?.rol == 'admin') {
     <button
       class="bg-[#ff7f50] text-white text-sm px-3 py-1 rounded shadow-lg"
       (click)="abrirActivityModal()"
@@ -24,6 +25,7 @@
     >
       Añadir Objetivo
     </button>
+  }
   </div>
 
   <!-- Calendario -->
