--- a/frontend/src/app/features/dashboard/pages/dashboard-home/dashboard-home.component.html
+++ b/frontend/src/app/features/dashboard/pages/dashboard-home/dashboard-home.component.html
@@ -41,7 +41,6 @@
           @for (task of children[activeChild].routine; track $index) {
           <li
             class="flex items-center px-3 py-2 rounded-lg shadow-sm transition-all duration-300 group bg-white dark:bg-gray-700"
-            [class.opacity-60]="task.completed"
             [@fadeIn]
           >
             <!-- Emoji -->
@@ -57,10 +56,7 @@
             </span>
 
             <!-- Nombre de la tarea -->
-            <span
-              class="flex-1 text-gray-900 dark:text-white"
-              [class.line-through]="task.completed"
-            >
+            <span class="flex-1 text-gray-900 dark:text-white">
               {{ task.label }}
             </span>
 
@@ -68,14 +64,6 @@
             <span class="font-mono text-sm text-gray-700 w-14 text-right ml-3">
               {{ task.time }}
             </span>
-            <!-- Checkbox -->
-            <input
-              type="checkbox"
-              class="mx-3 accent-green-500"
-              [checked]="task.completed"
-              (change)="toggleTaskComplete(task)"
-              aria-label="Marcar como completada"
-            />
           </li>
           }
         </ul>
