--- a/frontend/src/app/features/dashboard/pages/dashboard-home/dashboard-home.component.html
+++ b/frontend/src/app/features/dashboard/pages/dashboard-home/dashboard-home.component.html
@@ -1,5 +1,14 @@
 <div class="p-4 max-w-xl mx-auto md:max-w-6xl space-y-6">
+  <!-- Loading -->
+  @if (loading()) {
+  <div class="text-center py-8">
+    <i class="pi pi-spin pi-spinner text-3xl"></i>
+    <p>Cargando datos...</p>
+  </div>
+  }
+
   <!-- Saludo -->
+  @if (!loading()) {
   <div class="flex flex-col items-start">
     <h1 class="text-4xl font-bold pb-4 pt-3">
       ¡Hola
@@ -11,11 +20,12 @@
       </span>
       !
     </h1>
-
-    <span class="text-gray-500">{{ date | date : "fullDate" }}</span>
+    <!-- <span class="text-gray-500">{{ date | date : "fullDate" }}</span>  -->
   </div>
+  }
 
   <!-- Rutina -->
+  @if (!loading()) {
   <div class="relative flex items-center md:justify-center">
     <!-- Flecha izquierda -->
     <button
@@ -28,46 +38,46 @@
     </button>
 
     <div class="flex-1">
+      @if (children.length > 0) {
       <div class="mb-8">
         <img
-          [src]="children[activeChild].photoUrl"
-          [alt]="children[activeChild].name + ' photo'"
+          [src]="
+            children[activeChild].img_perfil ||
+            'https://api.dicebear.com/9.x/dylan/svg?seed=Default'
+          "
+          [alt]="children[activeChild].nombre + ' photo'"
           class="w-24 h-24 rounded-full object-cover mb-4 shadow mx-auto"
         />
         <h2 class="text-xl font-semibold mb-6 text-center">
-          Rutina de {{ children[activeChild].name }}
+          Rutina de {{ children[activeChild].nombre }}
         </h2>
         <ul class="w-full space-y-2">
-          @for (task of children[activeChild].routine; track $index) {
+          @for (task of routines; track task.id) {
           <li
             class="flex items-center px-3 py-2 rounded-lg shadow-sm transition-all duration-300 group bg-white dark:bg-gray-700"
-            [@fadeIn]
           >
-            <!-- Emoji -->
-            <span
+            <!-- Emoji o icono -->
+            <!-- <span
               class="w-12 h-12 mr-3 rounded-full flex items-center justify-center bg-white border-4 dark:bg-gray-400"
-              [ngClass]="getTaskColorClass(task.type)"
+              [ngClass]="getTaskColorClass(task.tipo)"
             >
-              @if (task.icon.startsWith('pi')) {
-              <i [class]="task.icon + ' text-xl'"></i>
-              } @else {
-              <span class="text-2xl">{{ task.icon }}</span>
-              }
-            </span>
+              <span class="text-2xl">{{ task.id }}</span>
+            </span> -->
 
             <!-- Nombre de la tarea -->
             <span class="flex-1 text-gray-900 dark:text-white">
-              {{ task.label }}
+              {{ task.nombre }}
             </span>
 
             <!-- Hora -->
             <span class="font-mono text-sm text-gray-700 w-14 text-right ml-3">
-              {{ task.time }}
+              {{ task.fecha_creacion }}
             </span>
           </li>
           }
         </ul>
       </div>
+      }
     </div>
 
     <!-- Flecha derecha -->
@@ -80,10 +90,12 @@
       <i class="pi pi-chevron-right"></i>
     </button>
   </div>
+  }
 
   <!-- Enlaces directos -->
+  @if (!loading()) {
   <div class="grid grid-cols-2 gap-4 md:grid-cols-4">
-    @for (link of links; track $index) {
+    @for (link of links; track link.url) {
     <a
       class="bg-primary hover:bg-[#ff7f50] hover:text-white rounded-xl p-4 flex flex-col justify-between items-start shadow transition dark:bg-gray-800 dark:hover:bg-gray-700 h-24 md:h-40 w-full"
       [routerLink]="link.url"
@@ -99,4 +111,5 @@
     </a>
     }
   </div>
+  }
 </div>
